Fix linebreak on mentor dashboard solutions

--- a/app/assets/stylesheets/pages/mentor-dashboard.scss
+++ b/app/assets/stylesheets/pages/mentor-dashboard.scss
@@ -125,7 +125,7 @@
                 white-space: nowrap;
                 text-overflow: ellipsis;
 
-                .name {
+                .handle {
                     display:inline-block;
                     font-weight:$bold;
                     color:#333;
